2020-09-21  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'last commit' badge

	* .travis.yml: Update to 'bionic', R 4.0, and BSPM

2019-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Use name without email as in other packages

2017-02-05  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* DESCRIPTION (Version): Release 0.2.6

2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* DESCRIPTION (Version, Date): Roll minor version

	* tests/minimalTests.R: At request of CRAN, run only if explicitly
	enabled via environment variable; refactored using stopifnot()

	* .travis.yml: Switch to using run.sh for Travis CI

2015-07-03  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Install curl via the marutter PPA as r-cran-curl

2015-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.5

	* R/random.R: Ensure URL <www.random.org> is used instead of
	<random.org> as the latter triggers redirections which can fail

	* NAMESPACE: Explicitly import read.table from utils
	* DESCRIPTION: Import the utils package

2015-05-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.4

	* tests/minimalTests.R: Added a minimal set of tests -- as we cannot
	validate the retrieved content but only some coarse summaries
	* tests/minimalTests.Rout.save: Checks for basic tests

	* R/random.R: fetch() rewritten to get a connection with curl::curl()
	function, or the internal libcurl method (for R >= 3.2.0), and
	renamed getConnection() -- with a matching closeConnection()

2015-05-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Roll Date and Version

	* R/random.R (fetch): New function to use internal url(...,
	method="libcurl") with R 3.2.0 or later and libcurl capabilities

2015-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.3

2015-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* R/random.R: Some cleanups, added copyright header

2015-01-06  Dirk Eddelbuettel  <edd@debian.org>
