@@ -1,3 +1,7 @@
+2020-12-29  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-09-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Added 'last commit' badge
